--- a/readme
+++ b/readme
@@ -1,4 +1,4 @@
-This artetmetiers folder contain my after studying project, a bog about my studies.
+This artetmetiers folder contain my after studying project, a blog about my studies.
 This project is in progress.
-I'm using a madeself framework i name "NIP" (New in programmation)
+I'm using a madeself framework i name "NIP" 
 
