--- a/readme
+++ b/readme
@@ -1,2 +1,3 @@
-Wheel PHP est un framework maison développé initialement à l'occasion d'un devoir de fin d'études que j'améliore au fur et à mesure que je développe de nouveaux projet.
+Wheel PHP est un framework maison développé initialement à l'occasion d'un devoir de fin d'études,
+que j'améliore au fur et à mesure que je développe de nouveaux projet.
 Il est developpé entierement en Orienté Objet et suit le modèle MVC.
